simplified the demo startup